--- a/src/components/ContactForm/ContactForm.module.css
+++ b/src/components/ContactForm/ContactForm.module.css
@@ -1,18 +1,30 @@
-.formContainer {
-  max-width: 250px;
-  border: 1px solid black;
-  padding: 10px;
-  margin-bottom: 20px;
-}
-
-.formWrapper {
+.wrapForm {
   display: flex;
   flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
-.button {
-  margin-top: 10px;
-  margin-left: auto;
-  margin-right: auto;
-  width: 100px;
+.wrapInput {
+  display: flex;
+  flex-direction: column;
+  width: 400px;
+}
+
+.formInput {
+  padding: 5px;
+}
+
+.formInputError {
+  color: red;
+}
+
+.formBtn {
+  padding: 5px;
+  border-radius: 8px;
+  width: 200px;
+  background-color: lightgreen;
+  font-weight: 600;
+  margin-bottom: 15px;
+  margin-top: 15px;
 }
