--- a/src/components/SearchBox/SearchBox.module.css
+++ b/src/components/SearchBox/SearchBox.module.css
@@ -1,6 +1,36 @@
-.findContacts {
+.container {
+  padding-bottom: 30px;
+  padding-top: 15px;
   display: flex;
   flex-direction: column;
-  width: 300px;
-  margin-bottom: 20px;
+  justify-content: start;
+  align-items: center;
+  gap: 5px;
+}
+.inputContainer {
+  display: flex;
+  flex-direction: row;
+  gap: 5px;
+}
+.text {
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
+  letter-spacing: -0.15px;
+  margin-bottom: 7px;
+  margin-top: 10px;
+}
+.icon {
+  margin-right: 5px;
+}
+.input {
+  width: 500px;
+  height: 30px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  letter-spacing: -0.15px;
+  border-radius: 5px;
+  padding: 5px;
 }
